--- a/depth_metric.ipynb
+++ b/depth_metric.ipynb
@@ -289,17 +289,63 @@
     "with open(depth_log_path, 'w') as f:\n",
     "    f.write(json.dumps(average_metrics))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'cf3dgs (Python 3.10.16)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n cf3dgs ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import imageio\n",
+    "\n",
+    "# load feature image\n",
+    "img_path = \"/scratch/yy561/monst3r/tum_0ssim2/tum_rgb_refine_pose_dino16/rgbd_dataset_freiburg3_walking_static_seq_390_419/renders/val_1_0001.png\"\n",
+    "mask_path = \"monst3r/tum_0ssim2/tum_rgb_refine_pose_dino16/rgbd_dataset_freiburg3_walking_static_seq_390_419/semantics/dynamic_mask_1.png\"\n",
+    "\n",
+    "img = imageio.imread(img_path)\n",
+    "mask = imageio.imread(mask_path)\n",
+    "\n",
+    "masked = img * mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dust3r",
+   "display_name": "cf3dgs",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
